Hotfix: Fixes z-index issues on toolbar popouts

--- a/src/styles/components/appNav/_horizontalNav.sass
+++ b/src/styles/components/appNav/_horizontalNav.sass
@@ -14,7 +14,7 @@
 
         @supports (position: sticky)
             position: sticky
-            z-index: map-get($zindex, toolbar)
+            z-index: #{map-get($zindex, toolbar) - 1}
 
         li a
             @extend %clickable
