--- a/src/styles/components/uniComments/__comments.sass
+++ b/src/styles/components/uniComments/__comments.sass
@@ -23,7 +23,7 @@
     @extend %mainNavDropdown // Consolidating a few styles
     position: fixed
     right: calc(6.5vw + 1.6rem) // The gutter on desktop + padding on toolbar + elems
-    z-index: #{map-get($zindex, toolbar) - 1}
+    z-index: #{map-get($zindex, toolbar) + 1}
     height: 80%
     width: 30rem
     margin-top: .3rem
